Fix notes font size on mobile

--- a/src/JobItem.css
+++ b/src/JobItem.css
@@ -215,4 +215,9 @@
     border: none;
     padding: 8px;
   }
+
+  .job-item-notes,
+  .job-item-notes-submit {
+    font-size: 16px;
+  }
 }
